# jank_edge_detection

./: .gitignore  Cargo.toml  readme.md
src/: edge_detection.rs  main.rs
