[package]
name = "edge_detection"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.25.1"
rand = "0.8.5"


[dependencies.nokhwa]
version = "0.10.4"
features = ["input-native"]

[dependencies.show-image]
version = "0.14.0"
features = ["image", "save"]
